yaml/deploy.yaml
##################################################################################################
# window services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: window
  labels:
    app: window
    service: window
spec:
  ports:
  - port: 9000
    name: http
  selector:
    app: window
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: window-v1
  labels:
    app: window
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: window
      version: v1
  template:
    metadata:
      labels:
        app: window
        version: v1
    spec:
      serviceAccountName: window
      containers:
      - name: window
        image: chenpengfei/gateway:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
##################################################################################################
# show services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: show
  labels:
    app: show
    service: show
spec:
  ports:
  - port: 9000
    name: http
  selector:
    app: show
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: show-v1
  labels:
    app: show
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: show
      version: v1
  template:
    metadata:
      labels:
        app: show
        version: v1
    spec:
      serviceAccountName: show
      containers:
      - name: show
        image: chenpengfei/show:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: show-v2
  labels:
    app: show
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: show
      version: v2
  template:
    metadata:
      labels:
        app: show
        version: v2
    spec:
      serviceAccountName: show
      containers:
      - name: show
        image: chenpengfei/show:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
