yaml/virtualservice.yaml
##################################################################################################
# windows 
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: window
spec:
  hosts:
  - "*"
  gateways:
  - window-gateway
  http:
  - match:
    - uri:
        exact: /show
    route:
    - destination:
        host: window.default.svc.cluster.local
        port:
          number: 9000

---
##################################################################################################
# show v1/v2 50% 权重
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: show
spec:
  hosts:
  - show.default.svc.cluster.local
  gateways:
    - window-gateway
  http:
  - match:
    - uri:
        exact: / 
    route:
    - destination:
        host: show.default.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: show.default.svc.cluster.local
        subset: v2
      weight: 50
